<resources>
    <string name="app_name">TargetUpsc</string>
    <string name="name">Name</string>
    <string name="gmail">Gmail</string>
    <string name="mobile">Mobile</string>
    <string name="location">Location</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign up</string>
    <string name="verify">Verify</string>
    <string name="resend_otp_number">Resend OTP Number?</string>
    <string name="user_type">User Type</string>
    <string name="school">School</string>
    <string name="under_graduate">Under Graduate</string>
    <string name="exam_appearing">Exam Appearing</string>
    <string name="submit">Submit</string>
    <string name="history">History</string>
    <string name="Geography">Geography</string>
    <string name="Sociology">Sociology</string>
    <string name="political_science">Political Science</string>
    <string name="anthropology">Anthropology</string>
    <string name="law">Law</string>
    <string name="Economics">Economics</string>
    <string name="Commerce">Commerce</string>
    <string name="Agriculture">Agriculture</string>
    <string name="username">Username</string>
    <string name="Password">password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="contribute">Contribute</string>
    <string name="new_post">New Post</string>
    <string name="category">Category</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="upload_image">Upload Image</string>
    <string name="sub_category">Sub Category</string>
    <string name="target_upsc">TARGET UPSC</string>
    <string name="search">Search</string>
    <string name="mcq">MCQ</string>
    <string name="test_series">Test Series</string>
    <string name="course">Course</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="my_profile">My Profile</string>
    <string name="my_study_material">My Study Material</string>
    <string name="payment_history">Payment History</string>
    <string name="about_us">About Us</string>
    <string name="notification">Notification</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="save_profile">Save Profile</string>
    <string name="course_pdf">Course PDF</string>
    <string name="total_paid">Total Paid</string>
    <string name="ruppee">₹</string>
    <string name="transaction_id">Transaction Id:</string>
    <string name="test_series_dash">Test series -</string>
    <string name="about_upsc_capital">About UPSC Capital</string>
    <string name="share">Share</string>
    <string name="start">Start</string>
    <string name="explanation">Explanation</string>
    <string name="next">Next</string>
    <string name="start_now">Start Now</string>
    <string name="congratulations">Congratulations</string>
    <string name="your_payment_has_been_successfully_done">Your payment has been successfully done</string>
    <string name="transaction_history">Transaction history</string>
    <string name="view_all">View all</string>
    <string name="course_video">Course Video</string>
    <string name="books_notes"><![CDATA[Books & Notes]]></string>
    <string name="my_uploads">My Uploads</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="optional">Optional</string>
    <string name="previous">Previous</string>

</resources>
