<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_30"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/Lnr_username"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/bg_rounded_gray_bordertransperent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_20"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_15"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textColorHint="@color/colorTextColor"
                android:singleLine="true"
                android:backgroundTint="@color/transparent"
                android:hint="@string/username"
                android:textColor="@color/colorTextColor"
                android:textSize="@dimen/fontsize_medium" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/Lnr_password"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/bg_rounded_gray_bordertransperent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_20"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/transparent"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_15"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/Password"
                android:textColor="@color/colorTextColor"
                android:textColorHint="@color/colorTextColor"
                android:textSize="@dimen/fontsize_medium" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_20">


            <ImageView
                android:id="@+id/img_remember_me"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/chk_untick" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/remember_me"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/fontsize_medium"
              />
        </LinearLayout>



        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_25"
            android:background="@drawable/bg_gradient_pink"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/fontsize_large"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:text="@string/forgot_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_10"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/fontsize_medium"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/don_t_have_an_account"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/fontsize_normal"
                />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:text="@string/register"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorred"
                android:textSize="@dimen/fontsize_normal"
               android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>