<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.UserTypeActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/btn_submit"
        tools:context=".Activity.UserTypeActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorred"
            android:paddingLeft="@dimen/margin_30"
            android:paddingTop="@dimen/margin_12"
            android:paddingBottom="@dimen/margin_12"
            android:text="@string/user_type"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/fontsize_large"
            android:textStyle="bold" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginRight="@dimen/margin_30"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/Lnr_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_school"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/school" />

                <TextView
                    android:id="@+id/txt_school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/school"
                    android:textColor="@color/colorTextColor"
                    android:textSize="@dimen/fontsize_large" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/Lnr_under_graduate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_under_graduate"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/school" />

                <TextView
                    android:id="@+id/txt_under_graduation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/under_graduate"
                    android:textColor="@color/colorTextColor"
                    android:textSize="@dimen/fontsize_large" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/Lnr_exam_appearing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginBottom="@dimen/margin_50"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_exam_appearing"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/school" />

                <TextView
                    android:id="@+id/txt_exam_Appearing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/exam_appearing"
                    android:textColor="@color/colorTextColor"
                    android:textSize="@dimen/fontsize_large" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@drawable/bg_rounded_green"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/fontsize_large"
        android:textStyle="bold" />

</RelativeLayout>